Fix requires in jwt-auth-cdi.